Dodanie strony ale nie wiem czy w dobrym miejscu

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+    <!-- Całość pisana ręcznie w celu treningu i przyswajania wiedzy-->
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -11,5 +12,10 @@
     <ul>
         <li>Elements</li>
     </ul>
+    <h2>
+        <a href="https://arkadiuszmyszka.github.io/Test/" target="_blank" title="Adres mojej testowej strony">
+            AMyszka
+        </a>
+    </h2>
 </body>
 </html>
