--- a/index.html
+++ b/index.html
@@ -5,10 +5,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <meta name="description" content="Nauka podstaw HTML5 dla początkujących AMyszka" />
+    <title>Test Document</title>
 </head>
 <body>
-    <h1>Header</h1>
+    <h1>Page title</h1>
     <ul>
         <li>Elements</li>
     </ul>
@@ -16,6 +17,9 @@
         <a href="https://arkadiuszmyszka.github.io/Test/" target="_blank" title="Adres mojej testowej strony">
             AMyszka
         </a>
+        <p>
+            Treści w trakcie wymyślania. Nie oczekujcie za wiele.
+          </p>
     </h2>
 </body>
 </html>
