--- a/index.html
+++ b/index.html
@@ -15,11 +15,16 @@
     </ul>
     <h2>
         <a href="https://arkadiuszmyszka.github.io/Test/" target="_blank" title="Adres mojej testowej strony">
-            AMyszka
+           <!--Link--> AMyszka
         </a>
+        <img
+        src="https://i.ibb.co/5sQgbL5/pobrane.png"
+        alt="Kurcze, a mialo byc tak pieknie"
+/>
         <p>
+           <!--Akapit-->
             Treści w trakcie wymyślania. Nie oczekujcie za wiele.
-          </p>
+        </p>
     </h2>
 </body>
 </html>
