--- a/index.html
+++ b/index.html
@@ -17,14 +17,23 @@
         <a href="https://arkadiuszmyszka.github.io/Test/" target="_blank" title="Adres mojej testowej strony">
            <!--Link--> AMyszka
         </a>
+        <!--Obrazek-->
         <img
-        src="https://i.ibb.co/5sQgbL5/pobrane.png"
-        alt="Kurcze, a mialo byc tak pieknie"
-/>
+            src="https://i.ibb.co/5sQgbL5/pobrane.png"
+            alt="Kurcze, a mialo byc tak pieknie"
+        />
         <p>
            <!--Akapit-->
             Treści w trakcie wymyślania. Nie oczekujcie za wiele.
         </p>
+    </h2>
+    <h2>
+        <p>Nad czy popracować</p>
+        <ul>
+            <li>Teoria</li>
+            <li>Praktyka</li>
+            <li>Weryfikacja progressu</li>
+        </ul>
     </h2>
 </body>
 </html>
