--- a/index.html
+++ b/index.html
@@ -9,32 +9,40 @@
     <title>Test Document</title>
 </head>
 <body>
-    <h1>Page title</h1>
-    <ul>
-        <li>Elements</li>
-    </ul>
-    <h2>
-        <p>
-            <a href="https://arkadiuszmyszka.github.io/Test/" target="_blank" title="Adres mojej testowej strony">
-            <!--Link--> AMyszka
-            </a>
-            <!--Obrazek-->
-            <img
-                src="https://i.ibb.co/5sQgbL5/pobrane.png"
-                alt="Kurcze, a mialo byc tak pieknie"
-            />
-        
-           <!--Akapit-->
-            Treści w trakcie wymyślania. Nie oczekujcie za wiele.
-        </p>
-    </h2>
-    <h2>
-        <p>Nad czy popracować</p>
+    <header><!--semantyka-->
+        <h1>Page title</h1>
         <ul>
-            <li>Teoria</li>
-            <li>Praktyka</li>
-            <li>Weryfikacja progressu</li>
+            <li>Elements</li>
         </ul>
-    </h2>
+    </header>
+    <article> <!--semantyka-->
+        <figure><!--semantyka-->
+            <h2>
+                <p>
+                <a href="https://arkadiuszmyszka.github.io/Test/" target="_blank" title="Adres mojej testowej strony">
+                <!--Link--> AMyszka
+                </a>
+                <!--Obrazek-->
+                <img
+                    src="https://i.ibb.co/5sQgbL5/pobrane.png"
+                    alt="Kurcze, a mialo byc tak pieknie"
+                />
+            
+            <!--Akapit-->
+                Treści w trakcie wymyślania. Nie oczekujcie za wiele.
+            </p>
+            </h2>
+        </figure>   
+        <h2>
+            <p>Nad czy popracować</p>
+            <ul>
+                <li>Teoria</li>
+                <li>Praktyka</li>
+                <li>Weryfikacja progressu</li>
+            </ul>
+        </h2>
+    </article>    
+    <footer> 
+    </footer>
 </body>
 </html>
